2010-03-09 Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk>

Reviewed by Dirk Schulze.

        [GStreamer] Buffering logic is not correct, and does not work very well
        https://bugs.webkit.org/show_bug.cgi?id=35706

        Do not call pause(), but set the GStreamer state directly. This is
        just a GStreamer implementation detail, and this will avoid having
        side effects in case we change the pause implementation in the
        future.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::load):

Canonical link: https://commits.webkit.org/47029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55732 268f45cc-cd09-0410-ab3c-d52691b4dbfc